decafast/answer/decafast.output
Terminals unused in grammar

   T_AND
   T_ASSIGN
   T_COMMA
   T_DIV
   T_DOT
   T_GEQ
   T_GT
   T_LEFTSHIFT
   T_LEQ
   T_LT
   T_MINUS
   T_MOD
   T_MULT
   T_NEQ
   T_NOT
   T_OR
   T_PLUS
   T_RIGHTSHIFT
   T_BREAK
   T_CONTINUE
   T_ELSE
   T_FOR
   T_IF
   T_NULL
   T_RETURN
   T_WHILE
   T_STRINGCONSTANT
   T_WHITESPACE
   T_COMMENT


State 25 conflicts: 2 shift/reduce
State 30 conflicts: 1 shift/reduce
State 42 conflicts: 1 shift/reduce
State 65 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: program

    2 program: extern_list decafpackage

    3 extern_list: T_EXTERN T_FUNC T_ID T_LPAREN externtype_list T_RPAREN methodtype T_SEMICOLON extern_list
    4            | %empty

    5 decafpackage: T_PACKAGE T_ID T_LCB field_decl method_decl T_RCB

    6 field_decl: T_VAR id_list decaftype T_SEMICOLON field_decl
    7           | T_VAR id_list arraytype T_SEMICOLON field_decl
    8           | T_VAR T_ID decaftype T_EQ constant T_SEMICOLON field_decl
    9           | %empty

   10 method_decl: T_FUNC T_ID T_LPAREN idtype_list T_RPAREN methodtype decafblock method_decl
   11            | %empty

   12 decafblock: T_LCB T_RCB

   13 id_list: id_list "," id_list
   14        | %empty
   15        | T_ID

   16 externtype_list: externtype_list "," externtype_list
   17                | %empty
   18                | externtype

   19 idtype_list: idtype_list "," idtype_list
   20            | %empty
   21            | T_ID decaftype

   22 decaftype: T_INTTYPE
   23          | T_BOOLTYPE

   24 methodtype: T_VOID
   25           | decaftype

   26 externtype: T_STRINGTYPE
   27           | methodtype

   28 arraytype: T_LSB T_INTCONSTANT T_RSB decaftype

   29 boolconstant: T_TRUE
   30             | T_FALSE

   31 constant: T_INTCONSTANT
   32         | T_CHARCONSTANT
   33         | boolconstant


Terminals, with rules where they appear

$end (0) 0
error (256)
T_AND (258)
T_ASSIGN (259)
T_COMMA (260)
T_DIV (261)
T_DOT (262)
T_EQ (263) 8
T_GEQ (264)
T_GT (265)
T_LCB (266) 5 12
T_LEFTSHIFT (267)
T_LEQ (268)
T_LPAREN (269) 3 10
T_LSB (270) 28
T_LT (271)
T_MINUS (272)
T_MOD (273)
T_MULT (274)
T_NEQ (275)
T_NOT (276)
T_OR (277)
T_PLUS (278)
T_RCB (279) 5 12
T_RIGHTSHIFT (280)
T_RPAREN (281) 3 10
T_RSB (282) 28
T_SEMICOLON (283) 3 6 7 8
T_BOOLTYPE (284) 23
T_BREAK (285)
T_CONTINUE (286)
T_ELSE (287)
T_EXTERN (288) 3
T_FALSE (289) 30
T_FOR (290)
T_FUNC (291) 3 10
T_IF (292)
T_INTTYPE (293) 22
T_NULL (294)
T_PACKAGE (295) 5
T_RETURN (296)
T_STRINGTYPE (297) 26
T_TRUE (298) 29
T_VAR (299) 6 7 8
T_VOID (300) 24
T_WHILE (301)
T_CHARCONSTANT (302) 32
T_INTCONSTANT (303) 28 31
T_STRINGCONSTANT (304)
T_WHITESPACE (305)
T_ID (306) 3 5 8 10 15 21
T_COMMENT (307)
"," (308) 13 16 19


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
start (55)
    on left: 1, on right: 0
program (56)
    on left: 2, on right: 1
extern_list (57)
    on left: 3 4, on right: 2 3
decafpackage (58)
    on left: 5, on right: 2
field_decl (59)
    on left: 6 7 8 9, on right: 5 6 7 8
method_decl (60)
    on left: 10 11, on right: 5 10
decafblock (61)
    on left: 12, on right: 10
id_list (62)
    on left: 13 14 15, on right: 6 7 13
externtype_list (63)
    on left: 16 17 18, on right: 3 16
idtype_list (64)
    on left: 19 20 21, on right: 10 19
decaftype (65)
    on left: 22 23, on right: 6 8 21 25 28
methodtype (66)
    on left: 24 25, on right: 3 10 27
externtype (67)
    on left: 26 27, on right: 18
arraytype (68)
    on left: 28, on right: 7
boolconstant (69)
    on left: 29 30, on right: 33
constant (70)
    on left: 31 32 33, on right: 8


State 0

    0 $accept: . start $end

    T_EXTERN  shift, and go to state 1

    $default  reduce using rule 4 (extern_list)

    start        go to state 2
    program      go to state 3
    extern_list  go to state 4


State 1

    3 extern_list: T_EXTERN . T_FUNC T_ID T_LPAREN externtype_list T_RPAREN methodtype T_SEMICOLON extern_list

    T_FUNC  shift, and go to state 5


State 2

    0 $accept: start . $end

    $end  shift, and go to state 6


State 3

    1 start: program .

    $default  reduce using rule 1 (start)


State 4

    2 program: extern_list . decafpackage

    T_PACKAGE  shift, and go to state 7

    decafpackage  go to state 8


State 5

    3 extern_list: T_EXTERN T_FUNC . T_ID T_LPAREN externtype_list T_RPAREN methodtype T_SEMICOLON extern_list

    T_ID  shift, and go to state 9


State 6

    0 $accept: start $end .

    $default  accept


State 7

    5 decafpackage: T_PACKAGE . T_ID T_LCB field_decl method_decl T_RCB

    T_ID  shift, and go to state 10


State 8

    2 program: extern_list decafpackage .

    $default  reduce using rule 2 (program)


State 9

    3 extern_list: T_EXTERN T_FUNC T_ID . T_LPAREN externtype_list T_RPAREN methodtype T_SEMICOLON extern_list

    T_LPAREN  shift, and go to state 11


State 10

    5 decafpackage: T_PACKAGE T_ID . T_LCB field_decl method_decl T_RCB

    T_LCB  shift, and go to state 12


State 11

    3 extern_list: T_EXTERN T_FUNC T_ID T_LPAREN . externtype_list T_RPAREN methodtype T_SEMICOLON extern_list

    T_BOOLTYPE    shift, and go to state 13
    T_INTTYPE     shift, and go to state 14
    T_STRINGTYPE  shift, and go to state 15
    T_VOID        shift, and go to state 16

    $default  reduce using rule 17 (externtype_list)

    externtype_list  go to state 17
    decaftype        go to state 18
    methodtype       go to state 19
    externtype       go to state 20


State 12

    5 decafpackage: T_PACKAGE T_ID T_LCB . field_decl method_decl T_RCB

    T_VAR  shift, and go to state 21

    $default  reduce using rule 9 (field_decl)

    field_decl  go to state 22


State 13

   23 decaftype: T_BOOLTYPE .

    $default  reduce using rule 23 (decaftype)


State 14

   22 decaftype: T_INTTYPE .

    $default  reduce using rule 22 (decaftype)


State 15

   26 externtype: T_STRINGTYPE .

    $default  reduce using rule 26 (externtype)


State 16

   24 methodtype: T_VOID .

    $default  reduce using rule 24 (methodtype)


State 17

    3 extern_list: T_EXTERN T_FUNC T_ID T_LPAREN externtype_list . T_RPAREN methodtype T_SEMICOLON extern_list
   16 externtype_list: externtype_list . "," externtype_list

    T_RPAREN  shift, and go to state 23
    ","       shift, and go to state 24


State 18

   25 methodtype: decaftype .

    $default  reduce using rule 25 (methodtype)


State 19

   27 externtype: methodtype .

    $default  reduce using rule 27 (externtype)


State 20

   18 externtype_list: externtype .

    $default  reduce using rule 18 (externtype_list)


State 21

    6 field_decl: T_VAR . id_list decaftype T_SEMICOLON field_decl
    7           | T_VAR . id_list arraytype T_SEMICOLON field_decl
    8           | T_VAR . T_ID decaftype T_EQ constant T_SEMICOLON field_decl

    T_ID  shift, and go to state 25

    $default  reduce using rule 14 (id_list)

    id_list  go to state 26


State 22

    5 decafpackage: T_PACKAGE T_ID T_LCB field_decl . method_decl T_RCB

    T_FUNC  shift, and go to state 27

    $default  reduce using rule 11 (method_decl)

    method_decl  go to state 28


State 23

    3 extern_list: T_EXTERN T_FUNC T_ID T_LPAREN externtype_list T_RPAREN . methodtype T_SEMICOLON extern_list

    T_BOOLTYPE  shift, and go to state 13
    T_INTTYPE   shift, and go to state 14
    T_VOID      shift, and go to state 16

    decaftype   go to state 18
    methodtype  go to state 29


State 24

   16 externtype_list: externtype_list "," . externtype_list

    T_BOOLTYPE    shift, and go to state 13
    T_INTTYPE     shift, and go to state 14
    T_STRINGTYPE  shift, and go to state 15
    T_VOID        shift, and go to state 16

    $default  reduce using rule 17 (externtype_list)

    externtype_list  go to state 30
    decaftype        go to state 18
    methodtype       go to state 19
    externtype       go to state 20


State 25

    8 field_decl: T_VAR T_ID . decaftype T_EQ constant T_SEMICOLON field_decl
   15 id_list: T_ID .

    T_BOOLTYPE  shift, and go to state 13
    T_INTTYPE   shift, and go to state 14

    T_BOOLTYPE  [reduce using rule 15 (id_list)]
    T_INTTYPE   [reduce using rule 15 (id_list)]
    $default    reduce using rule 15 (id_list)

    decaftype  go to state 31


State 26

    6 field_decl: T_VAR id_list . decaftype T_SEMICOLON field_decl
    7           | T_VAR id_list . arraytype T_SEMICOLON field_decl
   13 id_list: id_list . "," id_list

    T_LSB       shift, and go to state 32
    T_BOOLTYPE  shift, and go to state 13
    T_INTTYPE   shift, and go to state 14
    ","         shift, and go to state 33

    decaftype  go to state 34
    arraytype  go to state 35


State 27

   10 method_decl: T_FUNC . T_ID T_LPAREN idtype_list T_RPAREN methodtype decafblock method_decl

    T_ID  shift, and go to state 36


State 28

    5 decafpackage: T_PACKAGE T_ID T_LCB field_decl method_decl . T_RCB

    T_RCB  shift, and go to state 37


State 29

    3 extern_list: T_EXTERN T_FUNC T_ID T_LPAREN externtype_list T_RPAREN methodtype . T_SEMICOLON extern_list

    T_SEMICOLON  shift, and go to state 38


State 30

   16 externtype_list: externtype_list . "," externtype_list
   16                | externtype_list "," externtype_list .

    ","  shift, and go to state 24

    ","       [reduce using rule 16 (externtype_list)]
    $default  reduce using rule 16 (externtype_list)


State 31

    8 field_decl: T_VAR T_ID decaftype . T_EQ constant T_SEMICOLON field_decl

    T_EQ  shift, and go to state 39


State 32

   28 arraytype: T_LSB . T_INTCONSTANT T_RSB decaftype

    T_INTCONSTANT  shift, and go to state 40


State 33

   13 id_list: id_list "," . id_list

    T_ID  shift, and go to state 41

    $default  reduce using rule 14 (id_list)

    id_list  go to state 42


State 34

    6 field_decl: T_VAR id_list decaftype . T_SEMICOLON field_decl

    T_SEMICOLON  shift, and go to state 43


State 35

    7 field_decl: T_VAR id_list arraytype . T_SEMICOLON field_decl

    T_SEMICOLON  shift, and go to state 44


State 36

   10 method_decl: T_FUNC T_ID . T_LPAREN idtype_list T_RPAREN methodtype decafblock method_decl

    T_LPAREN  shift, and go to state 45


State 37

    5 decafpackage: T_PACKAGE T_ID T_LCB field_decl method_decl T_RCB .

    $default  reduce using rule 5 (decafpackage)


State 38

    3 extern_list: T_EXTERN T_FUNC T_ID T_LPAREN externtype_list T_RPAREN methodtype T_SEMICOLON . extern_list

    T_EXTERN  shift, and go to state 1

    $default  reduce using rule 4 (extern_list)

    extern_list  go to state 46


State 39

    8 field_decl: T_VAR T_ID decaftype T_EQ . constant T_SEMICOLON field_decl

    T_FALSE         shift, and go to state 47
    T_TRUE          shift, and go to state 48
    T_CHARCONSTANT  shift, and go to state 49
    T_INTCONSTANT   shift, and go to state 50

    boolconstant  go to state 51
    constant      go to state 52


State 40

   28 arraytype: T_LSB T_INTCONSTANT . T_RSB decaftype

    T_RSB  shift, and go to state 53


State 41

   15 id_list: T_ID .

    $default  reduce using rule 15 (id_list)


State 42

   13 id_list: id_list . "," id_list
   13        | id_list "," id_list .

    ","  shift, and go to state 33

    ","       [reduce using rule 13 (id_list)]
    $default  reduce using rule 13 (id_list)


State 43

    6 field_decl: T_VAR id_list decaftype T_SEMICOLON . field_decl

    T_VAR  shift, and go to state 21

    $default  reduce using rule 9 (field_decl)

    field_decl  go to state 54


State 44

    7 field_decl: T_VAR id_list arraytype T_SEMICOLON . field_decl

    T_VAR  shift, and go to state 21

    $default  reduce using rule 9 (field_decl)

    field_decl  go to state 55


State 45

   10 method_decl: T_FUNC T_ID T_LPAREN . idtype_list T_RPAREN methodtype decafblock method_decl

    T_ID  shift, and go to state 56

    $default  reduce using rule 20 (idtype_list)

    idtype_list  go to state 57


State 46

    3 extern_list: T_EXTERN T_FUNC T_ID T_LPAREN externtype_list T_RPAREN methodtype T_SEMICOLON extern_list .

    $default  reduce using rule 3 (extern_list)


State 47

   30 boolconstant: T_FALSE .

    $default  reduce using rule 30 (boolconstant)


State 48

   29 boolconstant: T_TRUE .

    $default  reduce using rule 29 (boolconstant)


State 49

   32 constant: T_CHARCONSTANT .

    $default  reduce using rule 32 (constant)


State 50

   31 constant: T_INTCONSTANT .

    $default  reduce using rule 31 (constant)


State 51

   33 constant: boolconstant .

    $default  reduce using rule 33 (constant)


State 52

    8 field_decl: T_VAR T_ID decaftype T_EQ constant . T_SEMICOLON field_decl

    T_SEMICOLON  shift, and go to state 58


State 53

   28 arraytype: T_LSB T_INTCONSTANT T_RSB . decaftype

    T_BOOLTYPE  shift, and go to state 13
    T_INTTYPE   shift, and go to state 14

    decaftype  go to state 59


State 54

    6 field_decl: T_VAR id_list decaftype T_SEMICOLON field_decl .

    $default  reduce using rule 6 (field_decl)


State 55

    7 field_decl: T_VAR id_list arraytype T_SEMICOLON field_decl .

    $default  reduce using rule 7 (field_decl)


State 56

   21 idtype_list: T_ID . decaftype

    T_BOOLTYPE  shift, and go to state 13
    T_INTTYPE   shift, and go to state 14

    decaftype  go to state 60


State 57

   10 method_decl: T_FUNC T_ID T_LPAREN idtype_list . T_RPAREN methodtype decafblock method_decl
   19 idtype_list: idtype_list . "," idtype_list

    T_RPAREN  shift, and go to state 61
    ","       shift, and go to state 62


State 58

    8 field_decl: T_VAR T_ID decaftype T_EQ constant T_SEMICOLON . field_decl

    T_VAR  shift, and go to state 21

    $default  reduce using rule 9 (field_decl)

    field_decl  go to state 63


State 59

   28 arraytype: T_LSB T_INTCONSTANT T_RSB decaftype .

    $default  reduce using rule 28 (arraytype)


State 60

   21 idtype_list: T_ID decaftype .

    $default  reduce using rule 21 (idtype_list)


State 61

   10 method_decl: T_FUNC T_ID T_LPAREN idtype_list T_RPAREN . methodtype decafblock method_decl

    T_BOOLTYPE  shift, and go to state 13
    T_INTTYPE   shift, and go to state 14
    T_VOID      shift, and go to state 16

    decaftype   go to state 18
    methodtype  go to state 64


State 62

   19 idtype_list: idtype_list "," . idtype_list

    T_ID  shift, and go to state 56

    $default  reduce using rule 20 (idtype_list)

    idtype_list  go to state 65


State 63

    8 field_decl: T_VAR T_ID decaftype T_EQ constant T_SEMICOLON field_decl .

    $default  reduce using rule 8 (field_decl)


State 64

   10 method_decl: T_FUNC T_ID T_LPAREN idtype_list T_RPAREN methodtype . decafblock method_decl

    T_LCB  shift, and go to state 66

    decafblock  go to state 67


State 65

   19 idtype_list: idtype_list . "," idtype_list
   19            | idtype_list "," idtype_list .

    ","  shift, and go to state 62

    ","       [reduce using rule 19 (idtype_list)]
    $default  reduce using rule 19 (idtype_list)


State 66

   12 decafblock: T_LCB . T_RCB

    T_RCB  shift, and go to state 68


State 67

   10 method_decl: T_FUNC T_ID T_LPAREN idtype_list T_RPAREN methodtype decafblock . method_decl

    T_FUNC  shift, and go to state 27

    $default  reduce using rule 11 (method_decl)

    method_decl  go to state 69


State 68

   12 decafblock: T_LCB T_RCB .

    $default  reduce using rule 12 (decafblock)


State 69

   10 method_decl: T_FUNC T_ID T_LPAREN idtype_list T_RPAREN methodtype decafblock method_decl .

    $default  reduce using rule 10 (method_decl)
